fix fonts on mobile android

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,8 @@
 ---
 @charset "utf-8";
 
-$base-font-family: "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, "PingFang SC", "Noto Sans CJK SC", "Hiragino Sans GB", "微软雅黑",  Helvetica, sans-serif;
+// $base-font-family: "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, "PingFang SC", "Noto Sans CJK SC", "Hiragino Sans GB", "微软雅黑",  Helvetica, sans-serif;
+$base-font-family:   "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, Roboto, "Noto Sans", Helvetica, sans-serif, "PingFang SC", "Noto Sans CJK SC", "Hiragino Sans GB", "微软雅黑";
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
